introduciendo algunos cambios

--- a/tarea-semana-2/css/style.css
+++ b/tarea-semana-2/css/style.css
@@ -35,7 +35,7 @@ p{
 }
 
 
-.descripcion{
+.description{
 	margin-top: 40px;
 	margin-right: 10px;
 	margin-left: 10px;
@@ -44,7 +44,7 @@ p{
 	
 	
 }
-.titulo{
+.title{
 	border: 1px solid black;
 	border-top: 0px;
 	border-right: 0px;
